2016/06/02 v48
	1. Fix a float number error.
	2. Fix action bar's scale not show well.
	3. Need IGAS v84 to fix the action bar's menu not shown bug.

2016/06/01 v47
	1. Now you can save and apply layout on single action bar.

2016/05/24 v46
	1. Fix the stance bar.

2016/05/21 v45
	1. Fix the word wrap on unit name cause error display.
	2. Fix the auto popup generator form's filter code editor's position.

2016/03/09 v44
	1. Fix an error.

2016/03/08 v43
	1. Fix auto-gen toy actions failed when entering the game.

2016/03/08 v41
	1. Add auto-generate for popup-action bars.
	2. Right-click root button of popup-action bar wouldn't trigger the action.

2016/02/27 v39
	1. Add new style for chat frames.
	2. Update for new IGAS lib, with feature fixed.

2014/10/20: v37
	1. You can use alt+mouse drag to change the flyout spell's direction, only only to create the popup-buttons.

2014/10/19: v36
	1. Now raidpanel can show buff with stacks, like shaman's Earth Shield.

2014/10/18: v35
	1. Set scale to the action bar wouldn't cause it move out of the screen.
	2. You can't resize the spell cooldown icon or unitframes to negative size.

2014/10/17: v34
	1. Update for wow 6.0.

2014/09/30: v33
	1. Fix pop-up action bar errors.

2014/04/02: v32
	1. Using config file to define what and how the elements should be shown on the screen for each unit frames in raidpanel and unitframe module.

	2. Now you can use right-click toggle show/hide the unit frames.

2013/11/13: v31-2
	1. Update for IGAS v55.

2013/11/08: v31
	1. A new feature added for the raid panel, used to send debuff to black list when right-click on it, default disabled, can be enabled in the "Element Settings" -> "Right mouse-click send debuff to black list".

	2. Debuffs in raid panel will be started from bottom-right to top-left, supported by the IGAS lib v55 which would be released in the future week.

2013/11/05: v30